Closed Bug 1525084 Opened 6 years ago Closed 6 years ago

Hovering/clicking over (seemingly random) stuff causes the whole Nightly window to jump up and down, if the window is maximized

Categories

(Core :: Graphics: WebRender, defect, P1)

x86_64
Windows 10
defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox-esr60 --- unaffected
firefox-esr68 --- disabled
firefox67 --- disabled
firefox68 --- disabled
firefox69 --- disabled
firefox70 + fixed
firefox71 --- fixed

People

(Reporter: itiel_yn8, Assigned: aosmond, NeedInfo)

References

(Regressed 1 open bug)

Details

(Keywords: regression)

Attachments

(2 files)

Attached file about:support

This started after bug 1524284 was landed (and now that I think about it, it actually happened a very long time ago when I enabled WebRender on my machine, but due to this bug I reverted back to non-WebRender).

While hovering/clicking seemingly hovering random stuff (never mind chrome/content area), the Nightly window jumps up and down by 1-2px, only if it's maximized.

Using Windows 10 x86.
See attached about:support.

I tried recording the issue but for some reason the issue is not visible in the recording.

Does it happen consistently when hover over the same things?

Flags: needinfo?(itiel_yn8)

(In reply to Jeff Muizelaar [:jrmuizel] from comment #1)

Does it happen consistently when hover over the same things?

Not every time, but eventually it will. I can hover on e.g. the reload button and move the cursor over to a bookmark and back to the reload button and it won't happen again. Though in the third or fourth try it will.

Flags: needinfo?(itiel_yn8)
Priority: -- → P1
Blocks: wr-intel-mvp
No longer blocks: wr-intel

Sotaro - curious to hear if you think this might be related to the other maximization bugs?

Flags: needinfo?(sotaro.ikeda.g)

It seems like a different bug. "hovering/clicking seemingly hovering random stuff" does not change window widget status.

I tried to reproduce the problem on several Windows10 PCs, but I could not reproduce the problem :(

Flags: needinfo?(sotaro.ikeda.g)

Bug 1556634 report also has "Intel(R) HD Graphics 530". I wonder if it might be related to the problem.

See Also: → 1556634

Itiel, is it possible to update Graphic driver to latest one? Does the problem happen with latest Firefox nightly?

Flags: needinfo?(itiel_yn8)

Okay, so, about a month or so after filing this bug I bought a brand new SSD and installed Windows 10 on it.
I don't have this issue there, but the previous HDD with the old Windows 10 installed is still there.

I re-connected this HDD and booted the old Windows 10 from it, updated Nightly to latest and the issue persists.
At that moment, I had the graphics driver version that ASUS is listing for my motherboard (H110M-K-D3), dated to 2016/08/10.
I then used Intel Driver & Support Assistant to try and automatically find an updated and suited driver for my mobo, but I got a "Sorry, no software updates are available" message.
Same with searching for a new driver in Device Manager.
So I manually looked for a driver in intel's website, downloaded a version that Intel does not approve for Windows 10 but for Windows 7 and 8.1, but it installed okay without any errors.
Now the issue does not reproduce.

The question is if this should still be called a bug, as (I think) most users won't do all the manual labor I did to find a more up-to-date version of the graphics driver.
Additionally, Intel's DSA + ASUS's webpage for my motherboard + Device Manager did not list a more up-to-date driver, so "officially" my driver I had is the one other users should have; I just found a "workaround".

Flags: needinfo?(itiel_yn8) → needinfo?(sotaro.ikeda.g)

... and now somehow Device Manager did find an update, installed the new driver (which is actually a downgrade as this driver date is 08/03/2017 and the one I've installed from Intel's website was mid-2018), and after I restarted Windows the issue is back.

Thank you very much for the confirmation! We could not expect that all related users update Graphic driver manually. Therefor, we might need to exclude old intel HD Graphics 530 driver from WebRender qualified devices.

Flags: needinfo?(sotaro.ikeda.g)

:jrmuizel, can you comment to Comment 7?

Flags: needinfo?(jmuizelaar)

Itiel, to confirm, 20.19.15.4624 is the broken driver version? What was the version of the driver that worked for you?

Flags: needinfo?(jmuizelaar) → needinfo?(itiel_yn8)

(In reply to Jeff Muizelaar [:jrmuizel] from comment #11)

Itiel, to confirm, 20.19.15.4624 is the broken driver version?

Yes, and there's probably one more. Will do some testing and report back.

(In reply to Jeff Muizelaar [:jrmuizel] from comment #11)

What was the version of the driver that worked for you?

On my (somewhat) newly installed Windows 10 on the same machine I have driver version 26.20.100.6912 (dated to 28/05/2019) which is working properly.
Not sure if that matters or not but now I have Windows 10 x64, on my previous HDD I had x86.
Will check what was the driver version that I mentioned in comment 7 and report back.

Keeping ni? to remind me.

(In reply to Jeff Muizelaar [:jrmuizel] from comment #11)

Itiel, to confirm, 20.19.15.4624 is the broken driver version?

Yes. This the driver you get when you update from the Device Manager.
I was wrong before about my claim on the ASUS's driver being faulty- for some reason I can't even install it.

(In reply to Jeff Muizelaar [:jrmuizel] from comment #11)

What was the version of the driver that worked for you?

21.20.16.5068. But I didn't test previous driver versions, so I'm not sure this is the lowest version number that exhibits this issue.

Flags: needinfo?(itiel_yn8) → needinfo?(jmuizelaar)
Blocks: wr-69
Flags: needinfo?(jmuizelaar)

We should see if we can reproduce this locally.

Flags: needinfo?(jmuizelaar)
Depends on: 1566555
Flags: needinfo?(jmuizelaar) → needinfo?(itiel_yn8)

Not sure what the needinfo is for.
Jeff, do you require my full Windows' version, like 10.0.16299.1268? (this one is just an example)

Flags: needinfo?(itiel_yn8) → needinfo?(jmuizelaar)

Alexis - could you help see if you can reproduce this?

Flags: needinfo?(a.beingessner)

🎉 i got the text and scrolling issues in the original bug to reproduce on our Dell XPS 13 (Intel HD 540)!

Flags: needinfo?(a.beingessner)

Oh whoops, I forgot to mention: we quickly determined this is almost certainly a dupe of Bug 1556634. Which is to say all the issues are the same "we travel back in time and show an old frame if you do something at high but erratic frame rates (like typing/scrolling)" bug.

It looks like the windows build that is supposed to fix this issue was just pushed to my laptop.

Itiel, did you just get this update, and did it fix the issue for you?

Flags: needinfo?(itiel_yn8)

Sorry whoops, got mixed up, that build hasn't actually shipped yet (18956 is the "good" one).

I'm still on 1809 on that machine, so I'm guessing the answer to your question would be no.

Flags: needinfo?(itiel_yn8)

Alexis, can we verify if we still see this issue? It seems like it might not be a dupe of Bug 1556634

Flags: needinfo?(a.beingessner)
Blocks: wr-70
No longer blocks: wr-69
Flags: needinfo?(jmuizelaar)

Hey Itiel,

We can't reproduce this issue on our machine on the latest Window OS version, but we couldn't reproduce it before either.
Can you please update to OS build 18362.356 and check if this is fixed or not?

Flags: needinfo?(itiel_yn8)

(In reply to Timea Babos from comment #22)

Hey Itiel,

We can't reproduce this issue on our machine on the latest Window OS version, but we couldn't reproduce it before either.
Can you please update to OS build 18362.356 and check if this is fixed or not?

This build number seems to represent Windows 10 1903, but I'm on 1809.
Even if upgrading to 1903 will fix it, this means 1809 is still affected to all users who didn't get the prompt to update to 1903 or didn't want to update.
Besides, upgrading will mean that I won't be able to verify a future fix to 1809...

Flags: needinfo?(itiel_yn8)

Andrew, could you help see if we can repro this?

Flags: needinfo?(aosmond)

in the other bug we had some confirmation that setting gfx.webrender.dcomp-win.enabled to false works around the problem. could we perhaps make this the default for users still on win10 1809 or older?

(In reply to [:philipp] from comment #25)

in the other bug we had some confirmation that setting gfx.webrender.dcomp-win.enabled to false works around the problem. could we perhaps make this the default for users still on win10 1809 or older?

Afaik, setting gfx.webrender.dcomp-win.enabled to false only helped on 1903. I don't recall seeing any evidence that it helped on 1809. Since this bug is happening on 1809, I'm not sure it's actually related to the other bug.

I'll keep tracking this into the 70 release, in case we end up seeing more reports after 70 hits a wider audience.

After some discussion I agree this is probably a different bug than the one I thought. Or more accurately, I did indeed see the other bug, and the similarity made me assume it was what they were reporting. Andrew seems to be on top of it now.

Flags: needinfo?(a.beingessner)

I was able to reproduce on Windows 10 1809 with driver 20.19.15.4624 on our Dell laptop with Intel 540 graphics using the refresh button / bookmarks STR as described in comment 2. If I upgrade the driver to 21.20.16.4664, it does not happen.

Has STR: --- → yes
OS: Unspecified → Windows 10
Hardware: Unspecified → x86_64

Here is the driver regression window break down:

10.18.15.4240 -- working
10.18.15.4256 to 10.18.15.4281 -- broken
20.19.15.4285 to 20.19.15.4835 -- broken
21.20.16.4471 to 21.20.16.4565 -- broken
21.20.16.4590 -- working (tested 21.20.16.4664 as well)

Flags: needinfo?(aosmond)

Would it help to block the driver?

Flags: needinfo?(aosmond)

Yes, that's the plan.

Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Flags: needinfo?(aosmond)

For nightly, the change will block WebRender for only the confirmed bad Intel driver ranges. For non-nightly, the change will block WebRender for all Intel drivers prior to 21.20.16.4590 (circa 2017).

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f6b08fc17ebc Update WebRender blocklist to prevent window jiggling with old Windows Intel drivers. r=jrmuizel
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71

Comment on attachment 9100159 [details]
Bug 1525084 - Update WebRender blocklist to prevent window jiggling with old Windows Intel drivers.

Beta/Release Uplift Approval Request

  • User impact if declined: May enable WebRender for users with drivers with known issues.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Just disables WebRender for users with old Intel drivers. Worst case it disables more than we thought.
  • String changes made/needed:
Attachment #9100159 - Flags: approval-mozilla-beta?

Comment on attachment 9100159 [details]
Bug 1525084 - Update WebRender blocklist to prevent window jiggling with old Windows Intel drivers.

Blocklist update, prevent particular intel driver users from getting WR.
Let's do this for the RC build.

Attachment #9100159 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Itiel are you still running Win10 1809?

Flags: needinfo?(itiel_yn8)

I can't remember the specifics, but I think I have it on the old HDD.
Would you like me to verify this works on 1809 with the latest Nightly?

Flags: needinfo?(itiel_yn8) → needinfo?(jmuizelaar)

Itiel, that would be interesting to know. I'd also like to know if the problem happens if you use the 20.19.15.4624 driver with 1903 or 1909.

Flags: needinfo?(jmuizelaar) → needinfo?(itiel_yn8)

(In reply to Jeff Muizelaar [:jrmuizel] from comment #42)

Itiel, that would be interesting to know. I'd also like to know if the problem happens if you use the 20.19.15.4624 driver with 1903 or 1909.

Driver installation of 20.19.15.4624 fails on 1909, so I'm guessing it's targeted for 1809, or something? Unsure.
Keeping the needinfo to test on 1809.

I was able to reproduce something like this again and confirmed via bisection that enabling direct composition (bug 1592509) made the problem go away.

It looks like enabling partial present in bug 1593179 also fixed the non-DirectComposition case.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: