Bug 1525084 - Update WebRender blocklist to prevent window jiggling with old Windows Intel drivers. r=jrmuizel a=lizzard

Differential Revision: https://phabricator.services.mozilla.com/D48839